--- a/app/src/main/res/menu/note_fragment_list_action_tab_menu.xml
+++ b/app/src/main/res/menu/note_fragment_list_action_tab_menu.xml
@@ -5,5 +5,10 @@
         android:id="@+id/new_note"
         android:icon="@drawable/ic_menu_add_note"
         android:title="@string/new_note"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/delete_note"
+        android:icon="@drawable/ic_menu_delete_note"
+        android:title="@string/delete_note"
         app:showAsAction="ifRoom|withText"/>
 </menu>
